--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 # Piper Robotic Arm Demo Dependencies
 piper_sdk>=1.0.0
 python-can>=3.3.4
+
+# Vision dependencies (ex14)
+ultralytics>=8.0.0
+opencv-python>=4.5
