:fire: Remove should_move() throttle and update .gitignore
- Remove should_move() function and related constants from main.py
  and main_color.py; throttling logic was disabled/ineffective
- Add mediapipe/, .python-version, uv.lock to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,16 @@ piper_sdk/
 *.pt
 *.pth
 *.onnx
+
+# Documentation
+docs/
+
+# Experimental scripts
+code/
+
+# MediaPipe models and demo
+examples/ex14/mediapipe/
+
+# Python version and uv lock
+.python-version
+uv.lock
